--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.luzi82.madokacountdown"
-      android:versionCode="2"
-      android:versionName="0.2">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <receiver android:name=".CountdownAppWidgetProvider">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
-            <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_provider" />
-        </receiver>
-        <service android:name=".MainService" android:exported="true" />
-    </application>
-    <uses-sdk android:minSdkVersion="3" />
+	package="com.luzi82.madokacountdown" android:versionCode="2"
+	android:versionName="0.2">
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".MainMenuActivity" android:theme="@style/Theme.Translucent" />
+		<receiver android:name=".CountdownAppWidgetProvider">
+			<intent-filter>
+				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+			</intent-filter>
+			<meta-data android:name="android.appwidget.provider"
+				android:resource="@xml/appwidget_provider" />
+		</receiver>
+		<service android:name=".MainService" android:exported="true" />
+	</application>
+	<uses-sdk android:minSdkVersion="3" />
 
 </manifest> 
