--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
 				android:resource="@xml/appwidget_provider" />
 		</receiver>
 		<service android:name=".MainService" android:exported="true" />
-		<activity android:name=".SettingActivity" />
+		<activity android:name=".SettingActivity" android:configChanges="keyboardHidden|orientation" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
